<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/update_category">
        <Preference
            android:title="@string/updates_title"
            android:summary="@string/updates_summary"
            app:icon="@drawable/ic_update"
            app:allowDividerBelow="true" >
        <!--app:key="manualupdate_header"
            app:fragment="com.nugget.hios.ui.preferences.updates.ManualUpdateFragment"-->
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/direct_download_url">
            </intent>
        </Preference>
        <Preference
            android:title="@string/updates_prerelease_title"
            android:summary="@string/updates_prerelease_summary"
            app:icon="@drawable/ic_prerelease"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_prerelease_url">
            </intent>
        </Preference>
        <Preference
            android:title="@string/autoupdate_title"
            android:summary="@string/autoupdate_summary"
            app:icon="@drawable/ic_autoupdate"
            app:allowDividerAbove="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/autoupdate_url">
            </intent>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/notifications_category"
        app:allowDividerAbove="false" >
        <Preference
            android:title="@string/notifications_title"
            android:summary="@string/notifications_summary"
            app:icon="@drawable/ic_notifications" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/notifications_url">
            </intent>
        </Preference>

        <Preference
            android:title="@string/whatsnew_title"
            app:icon="@drawable/ic_whatsnew" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_release_url" >
            </intent>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>