<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/tutorial_title">
        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.TutorialFragment"
            app:icon="@drawable/ic_tutorial"
            app:key="privacypolicy_header"
            app:title="@string/tutorial_header" >
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/general_title">
        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.RestaurantFragment"
            app:icon="@drawable/ic_restauranticon"
            app:key="restaurant_header"
            app:title="@string/title_dashboard" />

        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.HotelFragment"
            app:icon="@drawable/ic_worsteasternicon"
            app:key="hotel_header"
            app:title="@string/title_notifications" />

        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.RoomkeyFragment"
            app:icon="@drawable/ic_keyicon"
            app:key="key_header"
            app:title="@string/title_roomkey" />

        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.MoreFragment"
            app:icon="@drawable/ic_support"
            app:key="more_header"
            app:title="@string/title_activity_support" />

        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.InternetFragment"
            app:icon="@drawable/ic_interneticon"
            app:key="internet_header"
            app:title="@string/internet_header" />

        <Preference
            app:fragment="com.nugget.hios.ui.helpcenter.UpdatesFragment"
            app:icon="@drawable/ic_update"
            app:key="updates_header"
            app:title="@string/updates_header" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_more">
        <Preference
            app:fragment="com.nugget.hios.ui.comingsoon.ComingsoonFragment"
            app:icon="@drawable/ic_moreicon"
            app:key="comingsoon_header"
            app:title="@string/title_comingsoon" />

        <Preference
            app:fragment="com.nugget.hios.ui.support.SupportFragment"
            app:icon="@drawable/ic_support"
            app:key="support_header"
            app:title="@string/title_activity_support" />

        <Preference
            app:fragment="com.nugget.hios.ui.tc.TcFragment"
            app:icon="@drawable/ic_aboutapp"
            app:key="tc_header"
            app:title="@string/title_activity_tc" />

        <Preference
            app:fragment="com.nugget.hios.ui.feedback.FeedbackFragment"
            app:icon="@drawable/ic_feedback"
            app:key="feedback_header"
            app:title="@string/title_activity_feedback" />
    </PreferenceCategory>

</PreferenceScreen>