<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/recommended">
        <Preference
            android:title="@string/hirewards_title"
            android:summary="@string/hirewards_summary"
            app:icon="@drawable/new_rewards" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/hirewards_url" >
            </intent>
        </Preference>
    </PreferenceCategory>
    <!--Preference
        android:title="@string/hiosweather_title"
        android:summary="@string/hiosweather_summary"
        app:icon="@drawable/ic_hiosweather" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/hiosweather_url" >
        </intent>
    </Preference-->
    <Preference
        android:title="@string/nuggetdev_apps_title"
        android:summary="@string/nuggetdev_apps_summary"
        app:icon="@drawable/ic_moreicon">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/nuggetdev_url" >
        </intent>
    </Preference>
    <!--PreferenceCategory
        app:title="@string/windows">
        <Preference
            android:title="@string/hiosdesktop_title"
            android:summary="@string/hiosdesktop_summary"
            app:icon="@drawable/ic_hiosdesktop" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/hiosdesktop_url" >
            </intent>
        </Preference>
    </PreferenceCategory-->
</PreferenceScreen>