<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nugget.hios.ui.common.WebViewFragment"
        android:label="@string/title_home">
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="https://thehighlandcafe.github.io/hioswebcore/welcome.html" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.nugget.hios.ui.common.WebViewFragment"
        android:label="@string/title_dashboard">
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="https://thehighlandcafe.github.io/hioswebcore/restaurant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.nugget.hios.ui.common.WebViewFragment"
        android:label="@string/title_notifications">
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="https://thehighlandcafe.github.io/hioswebcore/hotelactivities.html" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nugget.hios.ui.common.WebViewFragment"
        android:label="@string/title_roomkey">
        <argument
            android:name="url"
            app:argType="string"
            android:defaultValue="https://thehighlandcafe.github.io/hioswebcore/roomkey.html" />
    </fragment>
</navigation>